--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "forever": "^3.0.4",
     "formstate": "^2.0.0",
     "mobx-react": "^7.1.0",
     "node-sass": "^4.14.1",
