--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "node-sass": "^4.14.1",
     "notistack": "^1.0.5",
     "react": "^17.0.1",
+    "react-chat-popup": "^1.1.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
   },
