--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "formstate": "^2.0.0",
     "mobx-react": "^7.1.0",
     "node-sass": "^4.14.1",
@@ -20,6 +21,7 @@
     "react-chat-popup": "^1.1.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
+    "react-paginate": "^7.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
