--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.6.0",
+    "@fullcalendar/interaction": "^5.6.0",
+    "@fullcalendar/react": "^5.6.0",
     "@hookform/error-message": "0.0.5",
     "@hookform/resolvers": "^1.3.5",
     "@material-ui/core": "^4.11.3",
@@ -14,6 +17,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "formstate": "^2.0.0",
+    "material-ui-search-bar": "^1.0.0",
     "mobx-react": "^7.1.0",
     "node-sass": "^4.14.1",
     "notistack": "^1.0.5",
