--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@daily-co/daily-js": "^0.11.1",
     "@fullcalendar/daygrid": "^5.6.0",
     "@fullcalendar/interaction": "^5.6.0",
     "@fullcalendar/react": "^5.6.0",
@@ -15,7 +16,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
+    "express": "^4.17.1",
     "formstate": "^2.0.0",
     "material-ui-search-bar": "^1.0.0",
     "mobx-react": "^7.1.0",
@@ -30,8 +33,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "simple-peer": "^9.11.0",
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.0",
+    "styled-components": "^5.2.3",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
