--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "notistack": "^1.0.5",
     "react": "^17.0.1",
     "react-chat-popup": "^1.1.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-paginate": "^7.1.2",
