--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "@zoomus/websdk": "^1.9.1",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
