--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "classnames": "^2.3.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formstate": "^2.0.0",
     "material-ui-search-bar": "^1.0.0",
