--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formstate": "^2.0.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
     "material-ui-search-bar": "^1.0.0",
     "mobx-react": "^7.1.0",
     "node-sass": "^4.14.1",
@@ -42,6 +43,7 @@
     "styled-components": "^5.2.3",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.0",
+    "wrtc": "^0.4.7",
     "yup": "^0.32.9"
   },
   "scripts": {
